<resources>
    <string name="app_name">wangMyAPP</string>
    <string name="home">Home</string>
    <string name="image_transition">image_transition</string>
    <string name="start_cycler">Start Another CyclerFragment</string>
    <string name="start_with_pop">Start Another CyclerFragment, and finish self</string>
    <string name="crop_result">wang(%1$dx%2$d)</string>

    <string name="like">点赞</string>
    <string name="sliding_validation">滑动验证</string>
    <string name="timer_shaft">时间轴</string>
    <string name="photo_view">图片缩放旋转</string>
    <string name="sliding_up_panel">可拖动的滑动面板</string>
    <string name="hello">这是歌词</string>
    <string name="follow">点击</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>

    <string name="zxing_one">定制化扫描界面</string>
    <string name="zxing_two">选择图片并解析</string>
    <string name="zxing_three">测试生成二维码图片</string>
    <string name="ucrop">裁剪图片</string>
    <string name="dialog">首页广告</string>
    <string name="evaluate">评价</string>
    <string name="check_updates">检查更新</string>
    <string name="adsorb">recycleview吸附效果</string>
    <string name="databinding">databinding快速入门</string>
    <string name="channel">频道定制</string>
    <string name="voice">RXjava</string>
    <string name="view">仿简书view弹出</string>
    <string name="water_view">蚂蚁森林水滴</string>
    <string name="text_view">文字转化为路径动画</string>
    <string name="flowlayout">RecyclerView流式布局</string>
    <string name="click_location">仿微信朋友圈点击评论自动定位</string>
    <string name="dagger_two_demo">dagger2_demo</string>
    <string name="move_text">跑马灯效果</string>
    <string name="page_turning">3D版翻页公告</string>
    <string name="ripple">主题切换动画效果</string>
    <string name="together">上下联动</string>
    <string name="gallery_projection">3D画廊</string>
    <string name="label">标签</string>
    <string name="tagviewgroup">仿小红书标签</string>
    <string name="navigation_animation">仿小红书导航动画</string>
    <string name="pull_down_menu">下拉菜单</string>
    <string name="face_recognition">人脸识别</string>

    <string name="phone_login">手机登录</string>
    <string name="phone_reg">注册帐号</string>

    <array name="str_body">
        <item>相册</item>
        <item>照相机</item>
    </array>

    <string name="spd"/>
    <string name="original_y"/>
    <string name="isUp"/>

    <string name="info_string">"1. 点击创建按钮开始创建标签组\n2. 按住标签组滑动，调整位置\n3.点击单个标签，调整该标签的方向\n4. 点击中心圆弹出dialog\n5. 长按标签组删除"</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
